--- a/containerization-series/05.ace-startup-optimization.md
+++ b/containerization-series/05.ace-startup-optimization.md
@@ -1,5 +1,9 @@
 # Containerizing IBM ACE: A Blog Series - Container Startup Optimization
 
+> Resources
+> All resources used in this blog are available in my GitHub repo, linked in the resources section. Except for
+> The IBM binaries, those you need to supply yourselves.
+
 Why do ACE containers take so long to boot?
 
 Not talking about your basic hello-world flows, but real-life integration servers. You’d expect most of the load to 
@@ -59,6 +63,76 @@ steps into a `start.sh` script. Full control, less repetition.
 
 Build the container using your modified Dockerfile. This creates a clean ACE 13 base image without any startup behavior 
 baked in.
+
+<details>
+
+  <summary>Dockerfile - Click to expand</summary>
+
+```dockerfile
+FROM registry.access.redhat.com/ubi9/ubi-minimal AS builder
+
+# Update base image and install required tools
+RUN microdnf update -y && microdnf install -y util-linux tar && microdnf clean all
+
+# Prepare target directory for ACE
+RUN mkdir -p /opt/ibm/ace-13
+
+# Copy ACE installer archive (you must provide this under /sources/)
+COPY /sources/13.0-ACE-LINUXX64-13.0.4.0.tar.gz /opt/ibm/ace13.tar.gz
+
+# Extract ACE, excluding unused tools and components to keep the image slim
+RUN tar -xvf /opt/ibm/ace13.tar.gz \
+    --exclude ace-13.0.*.0/tools \
+    --exclude ace-13.0.*.0/server/tools/ibm-dfdl-java.zip \
+    --exclude ace-13.0.*.0/server/tools/proxyservlet.war \
+    --exclude ace-13.0.*.0/server/bin/TADataCollector.sh \
+    --exclude ace-13.0.*.0/server/transformationAdvisor/ta-plugin-ace.jar \
+    --strip-components=1 \
+    -C /opt/ibm/ace-13/ > /dev/null 2>&1
+
+# Second stage: final runtime image
+FROM registry.access.redhat.com/ubi9/ubi-minimal
+
+# Install required packages and force tzdata reinstall for time zone support
+RUN microdnf update -y \
+    && microdnf install -y procps-ng findutils util-linux which tar \
+    && microdnf reinstall -y tzdata \
+    && microdnf clean all
+
+# Copy ACE runtime from builder stage
+COPY --from=builder /opt/ibm/ace-13 /opt/ibm/ace-13
+
+# Accept ACE license, create aceuser, and initialize a work directory
+RUN /opt/ibm/ace-13/ace make registry global accept license deferred \
+    && useradd --uid 1001 --create-home --home-dir /home/aceuser --shell /bin/bash -G mqbrkrs aceuser \
+    && su - aceuser -c "export LICENSE=accept && . /opt/ibm/ace-13/server/bin/mqsiprofile && mqsicreateworkdir /home/aceuser/ace-server" \
+    && echo ". /opt/ibm/ace-13/server/bin/mqsiprofile" >> /home/aceuser/.bashrc
+
+# Copy license texts, BAR files, and helper scripts into the image
+COPY /licenses/ /licenses/
+COPY /bars/*.bar /bars/
+COPY /scripts/* /scripts/
+
+# Set permissions for aceuser
+RUN chown 1001:1001 /scripts/* \
+    && chown 1001:1001 /bars/* \
+    && chmod +x /scripts/*
+
+# Switch to non-root user
+USER 1001
+
+# Expose standard ACE ports
+EXPOSE 7600 7800 7843
+
+# Default Integration Server name
+ENV ACE_SERVER_NAME=ace-server
+
+# Set working directory and entrypoint
+WORKDIR "/home/aceuser/ace-server"
+ENTRYPOINT ["bash"]
+```
+
+</details>
 
 ```powershell
 docker build -t ace-base:13.0.4.0 -f Dockerfile .
@@ -144,6 +218,114 @@ image.
 
 Run the multi-stage build to create the prebaked container. This step deploys the BAR files, runs ibmint optimize server, 
 and starts the Integration Server once during the build process.
+
+<details>
+
+  <summary>Dockerfile - Click to expand</summary>
+
+```dockerfile
+FROM registry.access.redhat.com/ubi9/ubi-minimal AS builder
+
+# Accept license in build context
+ENV LICENSE=accept
+
+# Work as root
+USER root
+
+# Update base image and install required tools for extraction and warmup
+RUN microdnf update -y && microdnf install -y util-linux tar unzip findutils binutils xz
+
+# Create target directory for ACE installation
+RUN mkdir -p /opt/ibm/ace-13
+
+# Copy ACE installer archive (supplied in /sources/)
+COPY /sources/13.0-ACE-LINUXX64-13.0.4.0.tar.gz /opt/ibm/ace13.tar.gz
+
+# Extract ACE, excluding unused tools to reduce image size
+RUN tar -xvf /opt/ibm/ace13.tar.gz \
+    --exclude ace-13.0.*.0/tools \
+    --exclude ace-13.0.*.0/server/tools/ibm-dfdl-java.zip \
+    --exclude ace-13.0.*.0/server/tools/proxyservlet.war \
+    --exclude ace-13.0.*.0/server/bin/TADataCollector.sh \
+    --exclude ace-13.0.*.0/server/transformationAdvisor/ta-plugin-ace.jar \
+    --strip-components=1 \
+    -C /opt/ibm/ace-13/ > /dev/null 2>&1
+
+# Accept license, create aceuser, initialize work directory
+RUN /opt/ibm/ace-13/ace make registry global accept license deferred \
+    && useradd --uid 1001 --create-home --home-dir /home/aceuser --shell /bin/bash -G mqbrkrs aceuser \
+    && su - aceuser -c "export LICENSE=accept && . /opt/ibm/ace-13/server/bin/mqsiprofile && mqsicreateworkdir /home/aceuser/ace-server" \
+    && echo ". /opt/ibm/ace-13/server/bin/mqsiprofile" >> /home/aceuser/.bashrc
+
+# Copy BAR files and helper scripts (warmup.sh will be run during build)
+COPY bars/*.bar /bars/
+COPY scripts/* /scripts/
+# COPY config/overrides.properties /config/overrides.properties  # optional overrides
+
+# Use bash login shell
+SHELL ["/bin/bash","-lc"]
+
+# Debug: show ACE installation contents
+RUN ls -la /opt/ibm/ace-13/
+
+# Set ownership and make warmup.sh executable
+RUN chown 1001:1001 /scripts/* \
+ && chmod +x /scripts/warmup.sh \
+ && sed -i 's/\r$//' /scripts/warmup.sh   # guard against Windows CRLF
+
+# Switch to aceuser
+USER 1001
+SHELL ["/bin/bash","-lc"]
+
+# Run warmup script during build to generate pre-warmed work directory
+RUN /scripts/warmup.sh
+
+
+# --- Final stage: minimal runtime image with pre-warmed work dir
+FROM registry.access.redhat.com/ubi9/ubi-minimal
+
+# Install required runtime tools and Java 11
+RUN microdnf update -y \
+    && microdnf install -y procps-ng findutils util-linux git tar java-11-openjdk-devel nano procps jq zip unzip \
+    && microdnf clean -y all
+
+# Reinstall tzdata to ensure time zone files are present
+RUN microdnf reinstall tzdata -y
+
+# Copy ACE runtime and pre-warmed aceuser home from builder
+COPY --from=builder /opt/ibm/ace-13 /opt/ibm/ace-13
+COPY --from=builder /home/aceuser/ /home/aceuser/
+COPY /licenses/ /licenses/
+
+# Clean up old log files from pre-warm step
+RUN rm -rf /home/aceuser/ace-server/log/*.*
+
+# Ensure aceuser and group exist
+RUN groupadd -g 1001 mqbrkrs || true \
+ && useradd --uid 1001 --create-home --home-dir /home/aceuser --shell /bin/bash -g 1001 -G mqbrkrs aceuser \
+ && chown -R 1001:1001 /home/aceuser
+
+# Expose ACE ports
+EXPOSE 7600 7800 7843
+
+# Run as non-root aceuser
+USER 1001
+
+# Default server name and license acceptance
+ENV ACE_SERVER_NAME=ace-server
+ENV LICENSE=accept
+
+# Work directory
+WORKDIR "/home/aceuser/ace-server"
+
+# Entrypoint: start IntegrationServer with warmed state
+# - Sources mqsiprofile
+# - Starts IntegrationServer with the prepared work dir
+# - Redirects output to /tmp/is.log
+ENTRYPOINT ["bash", "-c", ". /opt/ibm/ace-13/server/bin/mqsiprofile && IntegrationServer --name ${ACE_SERVER_NAME} -w /home/aceuser/ace-server > /tmp/is.log 2>&1"]
+```
+
+</details>
 
 ```powershell
 docker build -t ace-prebaked:13.0.4.0 -f Dockerfile .
@@ -236,9 +418,82 @@ docker build -t ace-init:13.0.4.0 -f Dockerfile .
 ...
 ```
 
-**Build the image**<br />
+**Load the image into Minikube**<br />
 
 Make the image available inside the Minikube registry so the cluster can pull it.
+
+<details>
+
+  <summary>Dockerfile - Click to expand</summary>
+
+```dockerfile
+# First stage: build ACE runtime
+FROM registry.access.redhat.com/ubi9/ubi-minimal AS builder
+
+# Update base image and install required tools for extraction
+RUN microdnf update -y && microdnf install -y procps-ng util-linux tar && microdnf clean all
+
+# Prepare target directory for ACE
+RUN mkdir -p /opt/ibm/ace-13
+
+# Copy ACE installer archive (you must provide this under /sources/)
+COPY /sources/13.0-ACE-LINUXX64-13.0.4.0.tar.gz /opt/ibm/ace13.tar.gz
+
+# Extract ACE, excluding unused tools and components to keep the image slim
+RUN tar -xvf /opt/ibm/ace13.tar.gz \
+    --exclude ace-13.0.*.0/tools \
+    --exclude ace-13.0.*.0/server/tools/ibm-dfdl-java.zip \
+    --exclude ace-13.0.*.0/server/tools/proxyservlet.war \
+    --exclude ace-13.0.*.0/server/bin/TADataCollector.sh \
+    --exclude ace-13.0.*.0/server/transformationAdvisor/ta-plugin-ace.jar \
+    --strip-components=1 \
+    -C /opt/ibm/ace-13/ > /dev/null 2>&1
+
+# Second stage: final runtime image
+FROM registry.access.redhat.com/ubi9/ubi-minimal
+
+# Install required packages and force tzdata reinstall for timezone data
+RUN microdnf update -y \
+    && microdnf install -y procps-ng findutils util-linux which tar \
+    && microdnf reinstall -y tzdata \
+    && microdnf clean all
+
+# Copy ACE runtime from builder stage
+COPY --from=builder /opt/ibm/ace-13 /opt/ibm/ace-13
+
+# Accept ACE license, create aceuser, and initialize a work directory
+RUN /opt/ibm/ace-13/ace make registry global accept license deferred \
+    && useradd --uid 1001 --create-home --home-dir /home/aceuser --shell /bin/bash -G mqbrkrs aceuser \
+    && su - aceuser -c "export LICENSE=accept && . /opt/ibm/ace-13/server/bin/mqsiprofile && mqsicreateworkdir /home/aceuser/ace-server" \
+    && echo ". /opt/ibm/ace-13/server/bin/mqsiprofile" >> /home/aceuser/.bashrc
+
+# Copy license texts, BAR files, and helper scripts into the image
+COPY /licenses/ /licenses/
+COPY /bars/*.bar /bars/
+COPY /scripts/* /scripts/
+
+# Set ownership and permissions for aceuser
+RUN chown 1001:1001 /scripts/* \
+    && chown 1001:1001 /bars/* \
+    && chmod +x /scripts/*
+
+# Run as non-root user
+USER 1001
+
+# Expose standard ACE ports
+EXPOSE 7600 7800 7843
+
+# Default Integration Server name
+ENV ACE_SERVER_NAME=ace-server
+
+# Entrypoint: run IntegrationServer directly
+# - Sources mqsiprofile for environment setup
+# - Starts IntegrationServer with the given name and work directory
+# - Redirects server output to /tmp/is.log
+ENTRYPOINT ["bash", "-c", ". /opt/ibm/ace-13/server/bin/mqsiprofile && IntegrationServer --name ${ACE_SERVER_NAME} -w /home/aceuser/ace-server > /tmp/is.log 2>&1"]
+```
+
+</details>
 
 ```powershell
 minikube image load ace-init:13.0.4.0 --overwrite=true
@@ -363,8 +618,8 @@ Then point your browser at: https://localhost:7600/
 ![img.png](img.png)
 
 This setup proves you can push optimization into runtime without touching the build. The init container takes care of the 
-heavy work and exits, leaving the main container warmed and ready. It adds some complexity compared to the other options, 
-but in return you get flexibility, faster startup, and potentially a lighter hit on your licenses.
+heavy work and exits, leaving the main container warmed and ready. It’s a bit more complex, sure. But you get faster startup, 
+more pipeline flexibility, and maybe even a lighter hit on your licenses.
 
 >License disclaimer
 These are just my observations. Always confirm with your account manager to understand the impact in your environment.
@@ -379,6 +634,7 @@ Now, let's compare the results.
 | Init container    | 6s   | From deploy until stop IS                            |
 | Runtime container | 2.9s | From starting the IS until 'finished initialization' |
 
+Note: the runtime container is the warm-start measurement from the init setup
 
 The numbers make the contrast clear. The base image lags behind, while both prebaked and init container setups shave off 
 noticeable time. There is no single winner here, but that was never the goal. These are two very different approaches to 
@@ -409,7 +665,7 @@ a bit more complexity. Pick your poison.
 ## Remarks
 
 There are plenty of other ways to squeeze more performance out of ACE. Smarter code, cleaner builds, better packaging. 
-All of that matters. I’ve written about those before (and might do so again)), so I won’t repeat myself here. This time 
+All of that matters. I’ve written about those before (and might do so again), so I won’t repeat myself here. This time 
 I only wanted to see what I could change at runtime to make containers start lighter.
 
 And yes, I cut some corners:
@@ -417,9 +673,14 @@ And yes, I cut some corners:
 - I used tiny sample flows and libraries. Real flows with heavy schemas will show an even bigger gap between cold and 
 warm starts.
 
-I wasn’t aiming for a winner here. Just wanted to see what happens when you tweak startup at runtime. Turns out you have 
-options, each with their own quirks. And with dynamic startup resources coming in the future, there’s still more ground 
-to cover.
+I wasn’t aiming for a winner here. Just wanted to see what happens when you tweak startup at runtime. Turns out you’ve got 
+options, each with their own quirks. And with dynamic startup resources on the horizon, this story isn’t finished yet.
+
+---
+
+## Resources
+* https://github.com/ot4i/ace-docker/blob/main/Dockerfile
+* https://github.com/matthiasblomme/ace-minikube/tree/master/runtime-optimize
 
 ---
 
