update and finish

--- a/docs/posts/containerization-series/05.ace-startup-optimization.md
+++ b/docs/posts/containerization-series/05.ace-startup-optimization.md
@@ -615,7 +615,7 @@ Handling connection for 7600
 
 Then point your browser at: https://localhost:7600/
 
-![img.png](img.png)
+![img.png](../../../containerization-series/img.png)
 
 This setup proves you can push optimization into runtime without touching the build. The init container takes care of the 
 heavy work and exits, leaving the main container warmed and ready. It’s a bit more complex, sure. But you get faster startup, 
@@ -689,7 +689,7 @@ options, each with their own quirks. And with dynamic startup resources on the h
 * [Containerizing IBM ACE: A Blog Series – The Basics](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/02/containerizing-ibm-ace-a-blog-series-the-basics)
 * [Containerizing IBM ACE: A Blog Series - Images vs Artifacts](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/containerizing-ibm-ace-a-blog-series-images-vs-art)
 * [Containerizing IBM ACE: A Blog Series - Things to Consider in Containers](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/things-to-consider-in-containers)
-* [Containerizing IBM ACE: A Blog Series - Scoping your runtimes]()
+* [Containerizing IBM ACE: A Blog Series - Scoping your runtimes](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/20/scoping-your-runtimes)
 * [Containerizing IBM ACE: A Blog Series - Container Startup Optimization]()
 
 ---
