update and finish

--- a/docs/posts/containerization-series/05.ace-startup-optimization.md
+++ b/docs/posts/containerization-series/05.ace-startup-optimization.md
@@ -615,7 +615,7 @@ Handling connection for 7600
 
 Then point your browser at: https://localhost:7600/
 
-![img.png](../../../containerization-series/img.png)
+![img1.png](img1.png)
 
 This setup proves you can push optimization into runtime without touching the build. The init container takes care of the 
 heavy work and exits, leaving the main container warmed and ready. It’s a bit more complex, sure. But you get faster startup, 
