finish blog 5, cleanup

--- a/docs/posts/containerization-series/03.things-to-consider-in-containers.md
+++ b/docs/posts/containerization-series/03.things-to-consider-in-containers.md
@@ -138,7 +138,8 @@ another time. That rabbit hole deserves its own blog.
 * [Containerizing IBM ACE: A Blog Series - Images vs Artifacts](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/containerizing-ibm-ace-a-blog-series-images-vs-art)
 * [Containerizing IBM ACE: A Blog Series - Things to Consider in Containers](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/things-to-consider-in-containers)
 * [Containerizing IBM ACE: A Blog Series - Scoping your runtimes](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/20/scoping-your-runtimes)
-* [Containerizing IBM ACE: A Blog Series - Container Startup Optimization]()
+* [Containerizing IBM ACE: A Blog Series - Container Startup Optimization](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/26/container-startup-optimization)
+
 
 ---
 
