updated blog added cover art update gen script to  - include cover art  - add read time bade  - add description preview

--- a/docs/posts/containerization-series/01.the-basics.md
+++ b/docs/posts/containerization-series/01.the-basics.md
@@ -1,3 +1,9 @@
+---
+title: Containerizing IBM ACE: A Blog Series – The Basics
+description: If you’ve been keeping an eye on modern (and yes, I’m using that term loosely) IT trends, you’ve probably noticed how containerization has gone from a niche too.
+reading_time: 7 min
+---
+
 # Containerizing IBM ACE: A Blog Series – The Basics
 
 ## Introduction to Containerization
