--- a/docs/posts/containerization-series/02.images-vs-artefacts.md
+++ b/docs/posts/containerization-series/02.images-vs-artefacts.md
@@ -1,3 +1,9 @@
+---
+title: Containerizing IBM ACE: A Blog Series - Images vs Artifacts
+description: When people start talking about container images for IBM ACE, you’ll often hear the phrase *“bake vs fry”*. Or at least you should. It sounds a bit like we’re c.
+reading_time: 7 min
+---
+
 # Containerizing IBM ACE: A Blog Series - Images vs Artifacts
 
 When people start talking about container images for IBM ACE, you’ll often hear the phrase *“bake vs fry”*. Or at least 
