--- a/docs/posts/containerization-series/03.things-to-consider-in-containers.md
+++ b/docs/posts/containerization-series/03.things-to-consider-in-containers.md
@@ -1,3 +1,9 @@
+---
+title: Containerizing IBM ACE: A Blog Series - Things to Consider in Containers
+description: When people talk about running workloads in containers, it’s easy to get caught up in the promise. Portability, speed, consistency. Those benefits are real. But.
+reading_time: 7 min
+---
+
 # Containerizing IBM ACE: A Blog Series - Things to Consider in Containers
 
 When people talk about running workloads in containers, it’s easy to get caught up in the promise. Portability, speed, 
