--- a/docs/posts/containerization-series/04.scoping-your-runtime.md
+++ b/docs/posts/containerization-series/04.scoping-your-runtime.md
@@ -1,3 +1,9 @@
+---
+title: Containerizing IBM ACE: A Blog Series - Scoping your runtimes
+description: Packing containers isn’t complicated, right? Just throw everything in there. Well, it is. Until it isn’t. Stack too much in one and you overload. Mix fragile wi.
+reading_time: 9 min
+---
+
 # Containerizing IBM ACE: A Blog Series - Scoping your runtimes
 
 Packing containers isn’t complicated, right? Just throw everything in there. Well, it is. Until it isn’t. Stack too much 
