--- a/docs/posts/containerization-series/05.ace-startup-optimization.md
+++ b/docs/posts/containerization-series/05.ace-startup-optimization.md
@@ -1,3 +1,9 @@
+---
+title: Containerizing IBM ACE: A Blog Series - Container Startup Optimization
+description: Why do ACE containers take so long to boot?.
+reading_time: 23 min
+---
+
 # Containerizing IBM ACE: A Blog Series - Container Startup Optimization
 
 > Resources
