added date's to the blogs

--- a/docs/posts/containerization-series/05.ace-startup-optimization.md
+++ b/docs/posts/containerization-series/05.ace-startup-optimization.md
@@ -2,6 +2,7 @@
 title: Containerizing IBM ACE: A Blog Series - Container Startup Optimization
 description: Why do ACE containers take so long to boot?.
 reading_time: 23 min
+date: 2025-09-26
 ---
 
 # Containerizing IBM ACE: A Blog Series - Container Startup Optimization
