--- a/docs/posts/containerization-series/01.the-basics.md
+++ b/docs/posts/containerization-series/01.the-basics.md
@@ -2,6 +2,7 @@
 title: Containerizing IBM ACE: A Blog Series – The Basics
 description: If you’ve been keeping an eye on modern (and yes, I’m using that term loosely) IT trends, you’ve probably noticed how containerization has gone from a niche too.
 reading_time: 7 min
+date: 2025-09-02
 ---
 
 # Containerizing IBM ACE: A Blog Series – The Basics
