--- a/docs/posts/containerization-series/02.images-vs-artefacts.md
+++ b/docs/posts/containerization-series/02.images-vs-artefacts.md
@@ -2,6 +2,7 @@
 title: Containerizing IBM ACE: A Blog Series - Images vs Artifacts
 description: When people start talking about container images for IBM ACE, you’ll often hear the phrase *“bake vs fry”*. Or at least you should. It sounds a bit like we’re c.
 reading_time: 7 min
+date: 2025-09-11
 ---
 
 # Containerizing IBM ACE: A Blog Series - Images vs Artifacts
