--- a/docs/posts/containerization-series/04.scoping-your-runtime.md
+++ b/docs/posts/containerization-series/04.scoping-your-runtime.md
@@ -2,6 +2,7 @@
 title: Containerizing IBM ACE: A Blog Series - Scoping your runtimes
 description: Packing containers isn’t complicated, right? Just throw everything in there. Well, it is. Until it isn’t. Stack too much in one and you overload. Mix fragile wi.
 reading_time: 9 min
+date: 2025-09-20
 ---
 
 # Containerizing IBM ACE: A Blog Series - Scoping your runtimes
