--- a/docs/posts/containerization-series/04.scoping-your-runtime.md
+++ b/docs/posts/containerization-series/04.scoping-your-runtime.md
@@ -1,9 +1,19 @@
 ---
 date: 2025-09-20
-title: Containerizing IBM ACE: A Blog Series - Scoping your runtimes
-description: Packing containers isn’t complicated, right? Just throw everything in there. Well, it is. Until it isn’t. Stack too much in one and you overload. Mix fragile wi.
+title: 'Containerizing IBM ACE: A Blog Series - Scoping your runtimes'
+description: The fourth installment in the Containerizing ACE series, tackling a number
+  of ways to determine your container content
 reading_time: 9 min
 ---
+
+<!--MD_POST_META:START-->
+<div class="md-post-meta">
+  <div class="md-post-meta-left">2025-09-20 · ⏱ 9 min</div>
+  <div class="md-post-meta-right"><span class="post-share-label">Share:</span><a class="post-share post-share-linkedin" href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmatthiasblomme.github.io%2Fblogs%2Fposts%2Fcontainerization-series%2F04.scoping-your-runtime%2F" target="_blank" rel="noopener" title="Share on LinkedIn">in</a></div>
+</div>
+<hr class="md-post-divider"/>
+
+<!--MD_POST_META:END-->
 
 # Containerizing IBM ACE: A Blog Series - Scoping your runtimes
 
