--- a/docs/posts/containerization-series/01.the-basics.md
+++ b/docs/posts/containerization-series/01.the-basics.md
@@ -1,9 +1,19 @@
 ---
 date: 2025-09-02
-title: Containerizing IBM ACE: A Blog Series – The Basics
-description: If you’ve been keeping an eye on modern (and yes, I’m using that term loosely) IT trends, you’ve probably noticed how containerization has gone from a niche too.
+title: 'Containerizing IBM ACE: A Blog Series - The Basics'
+description: The first installment in the Containerizing ACE series, tackling the
+  basics concepts
 reading_time: 7 min
 ---
+
+<!--MD_POST_META:START-->
+<div class="md-post-meta">
+  <div class="md-post-meta-left">2025-09-02 · ⏱ 7 min</div>
+  <div class="md-post-meta-right"><span class="post-share-label">Share:</span><a class="post-share post-share-linkedin" href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmatthiasblomme.github.io%2Fblogs%2Fposts%2Fcontainerization-series%2F01.the-basics%2F" target="_blank" rel="noopener" title="Share on LinkedIn">in</a></div>
+</div>
+<hr class="md-post-divider"/>
+
+<!--MD_POST_META:END-->
 
 # Containerizing IBM ACE: A Blog Series – The Basics
 
@@ -108,5 +118,3 @@ Written by [Matthias Blomme](https://www.linkedin.com/in/matthiasblomme/)
 
 \#IBMChampion \
 \#AppConnectEnterprise(ACE)
-
-
