--- a/docs/posts/containerization-series/01.the-basics.md
+++ b/docs/posts/containerization-series/01.the-basics.md
@@ -6,10 +6,12 @@ description: The first installment in the Containerizing ACE series, tackling th
 reading_time: 7 min
 ---
 
+![cover](img.png){ .md-banner }
+
 <!--MD_POST_META:START-->
 <div class="md-post-meta">
   <div class="md-post-meta-left">2025-09-02 · ⏱ 7 min</div>
-  <div class="md-post-meta-right"><span class="post-share-label">Share:</span><a class="post-share post-share-linkedin" href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmatthiasblomme.github.io%2Fblogs%2Fposts%2Fcontainerization-series%2F01.the-basics%2F" target="_blank" rel="noopener" title="Share on LinkedIn">in</a></div>
+  <div class="md-post-meta-right"><span class="post-share-label">Share:</span> <a class="post-share post-share-linkedin" href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fmatthiasblomme.github.io%2Fblogs%2Fposts%2Fcontainerization-series%2F01.the-basics%2F" target="_blank" rel="noopener" title="Share on LinkedIn">[<span class="in">in</span>]</a></div>
 </div>
 <hr class="md-post-divider"/>
 
